XXX(003): add metrics